--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,6 @@
             <version>17.0.6</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>2.0.24</version>
-        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -46,7 +41,23 @@
             <version>23-ea+3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.24</version>
+        </dependency>
+
+
     </dependencies>
+
+
+
 
     <build>
         <plugins>
