--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,19 @@
       <artifactId>javase</artifactId>
       <version>3.4.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.infobip/infobip-mobile-messaging-api-java -->
+    <dependency>
+      <groupId>com.infobip</groupId>
+      <artifactId>infobip-mobile-messaging-api-java</artifactId>
+      <version>12.6.1</version>
+    </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.12.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
